[package]
name = "actix_example"
version = "0.1.0"
authors = ["Jingjing Duan <duanjingjing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-rt = "1.0"
factor = "0.4"

[[bin]]
name = "ping_example"
path = "bin/ping_example.rs"

[[bin]]
name = "two_actors"
path = "bin/two_actors.rs"

[[bin]]
name = "sync_actors"
path = "bin/sync_actors.rs"
