[package]
name = "actix_example"
version = "0.1.0"
authors = ["Jingjing Duan <duanjingjing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix_derive = "0.5"
byteorder = "1.3"
bytes = "0.5"
factor = "0.4"
futures = "0.3"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", default-features=false, features=["tcp", "time", "signal", "io-util"] }
tokio-util = { version = "0.2", features = ["codec"] }

[[bin]]
name = "ping_example"
path = "bin/ping_example.rs"

[[bin]]
name = "two_actors"
path = "bin/two_actors.rs"

[[bin]]
name = "sync_actors"
path = "bin/sync_actors.rs"

[[bin]]
name = "actor_ring"
path = "bin/actor_ring.rs"

[[bin]]
name = "chat_server"
path = "bin/chat_server.rs"

[[bin]]
name = "chat_client"
path = "bin/chat_client.rs"
