"Bazel dependencies"

bazel_dep(name = "contrib_rules_jvm", version = "0.27.0")
bazel_dep(name = "rules_java", version = "7.6.5")
bazel_dep(name = "rules_jvm_external", version = "6.2")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_proto_grpc_java", version = "5.0.0")

# Load and configure the necessary extensions and toolchains
use_extension("@rules_proto//proto:defs.bzl", "proto_lang_toolchain")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

JUNIT_JUPITER_VERSION = "5.10.3"

JUNIT_PLATFORM_VERSION = "1.10.3"

maven.artifact(
    artifact = "javafaker",
    exclusions = ["org.yaml:snakeyaml"],
    group = "com.github.javafaker",
    version = "1.0.2",  # Keep version in sync with below!
)
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-engine:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-params:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.platform:junit-platform-launcher:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-reporting:%s" % JUNIT_PLATFORM_VERSION,
        "build.buf:protovalidate:0.2.1",
        "ch.qos.logback:logback-classic:1.4.14",
        "ch.qos.logback:logback-core:1.4.14",
        "co.elastic.clients:elasticsearch-java:8.13.2",
        "com.amazonaws:aws-java-sdk-core:1.12.220",
        "com.amazonaws:aws-java-sdk-sts:1.12.220",
        "com.asarkar.grpc:grpc-test:1.2.2",
        "com.auth0:java-jwt:3.11.0",
        "com.aventrix.jnanoid:jnanoid:2.0.0",
        "com.bucket4j:bucket4j-core:8.3.0",
        "com.datadoghq:dd-trace-api:1.19.1",
        "com.datadoghq:java-dogstatsd-client:4.0.0",
        "com.fasterxml.jackson.core:jackson-annotations:2.15.4",
        "com.fasterxml.jackson.core:jackson-core:2.15.4",
        "com.fasterxml.jackson.core:jackson-databind:2.15.4",
        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.4",
        "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.4",
        "com.fasterxml.uuid:java-uuid-generator:4.0.1",
        "com.github.ben-manes.caffeine:caffeine:3.1.8",
        "com.github.javafaker:javafaker:1.0.2",
        "com.github.luben:zstd-jni:1.5.5-5",
        "com.github.spotbugs:spotbugs-annotations:4.8.5",
        "com.github.spullara.mustache.java:compiler:0.9.10",
        "com.github.stefanbirkner:fake-sftp-server-lambda:1.0.1",
        "com.github.stefanbirkner:system-lambda:1.2.1",
        "com.google.api.grpc:proto-google-cloud-kms-v1:0.137.0",
        "com.google.api.grpc:proto-google-cloud-pubsub-v1:1.111.3",
        "com.google.api.grpc:proto-google-cloud-secretmanager-v1:2.43.0",
        "com.google.api.grpc:proto-google-cloud-spanner-v1:6.68.0",
        "com.google.api:gax:2.48.0",
        "com.google.auth:google-auth-library-credentials:1.23.0",
        "com.google.auth:google-auth-library-oauth2-http:1.23.0",
        "com.google.cloud:google-cloud-bigquery:2.40.1",
        "com.google.cloud:google-cloud-core:2.38.0",
        "com.google.cloud:google-cloud-dlp:3.47.0",
        "com.google.cloud:google-cloud-kms:2.46.0",
        "com.google.cloud:google-cloud-logging:3.17.1",
        "com.google.cloud:google-cloud-pubsub:1.129.3",
        "com.google.cloud:google-cloud-secretmanager:2.43.0",
        "com.google.cloud:google-cloud-spanner:6.68.0",
        "com.google.cloud:google-cloud-storage:2.22.0",
        "com.google.cloud:spring-cloud-gcp-autoconfigure:5.4.0",
        "com.google.cloud:spring-cloud-gcp-core:5.4.0",
        "com.google.cloud:spring-cloud-gcp-data-spanner:5.4.0",
        "com.google.cloud:spring-cloud-gcp-logging:5.4.0",
        "com.google.cloud:spring-cloud-gcp-pubsub:5.4.0",
        "com.google.code.gson:gson:2.10.1",
        "com.google.guava:guava-testlib:32.0.1-jre",
        "com.google.guava:guava:32.0.1-jre",
        "com.google.protobuf:protobuf-java-util:3.25.3",
        "com.google.protobuf:protobuf-java:3.25.3",
        "com.google.truth:truth:1.1.3",
        "com.google:bitcoinj:0.11.3",
        "com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20220608.1",
        "com.hierynomus:sshj:0.31.0",
        "com.puppycrawl.tools:checkstyle:10.8.0",
        "com.sendgrid:java-http-client:4.3.9",
        "com.sendgrid:sendgrid-java:4.8.2",
        "com.slack.api:slack-api-client:1.27.3",
        "com.univocity:univocity-parsers:2.9.1",
        "commons-beanutils:commons-beanutils:1.9.4",
        "commons-codec:commons-codec:1.17.0",
        "commons-collections:commons-collections:3.2.2",
        "commons-io:commons-io:2.11.0",
        "commons-lang:commons-lang:2.6",
        "commons-net:commons-net:3.10.0",
        "commons-validator:commons-validator:1.7",
        "io.github.dvgaba:easy-rules-core:1.2.0",
        "io.github.hakky54:logcaptor:2.1.0",
        "io.grpc:grpc-api:1.62.2",
        "io.grpc:grpc-core:1.62.2",
        "io.grpc:grpc-inprocess:1.62.2",
        "io.grpc:grpc-netty-shaded:1.62.2",
        "io.grpc:grpc-services:1.62.2",
        "io.grpc:grpc-stub:1.62.2",
        "io.jaegertracing:jaeger-core:1.8.1",
        "io.lettuce:lettuce-core:6.3.2.RELEASE",
        "io.netty:netty-buffer:4.1.109.Final",
        "io.opentracing:opentracing-api:0.33.0",
        "io.opentracing:opentracing-noop:0.33.0",
        "io.opentracing:opentracing-util:0.33.0",
        "io.sentry:sentry:5.0.1",
        "io.split.client:java-client:4.11.1",
        "jakarta.annotation:jakarta.annotation-api:2.1.1",
        "jakarta.json:jakarta.json-api:2.1.3",
        "jakarta.persistence:jakarta.persistence-api:3.1.0",
        "jakarta.servlet:jakarta.servlet-api:6.0.0",
        "jakarta.validation:jakarta.validation-api:3.0.2",
        "junit:junit:4.13.2",
        "net.jcip:jcip-annotations:1.0",
        "org.apache.commons:commons-collections4:4.3",
        "org.apache.commons:commons-lang3:3.12.0",
        "org.apache.commons:commons-pool2:2.11.1",
        "org.apache.commons:commons-text:1.10.0",
        "org.apache.httpcomponents:httpasyncclient:4.1.5",
        "org.apache.httpcomponents:httpclient:4.5.14",
        "org.apache.httpcomponents:httpcore:4.4.16",
        "org.apache.logging.log4j:log4j-api:2.19.0",
        "org.aspectj:aspectjweaver:1.9.22",
        "org.assertj:assertj-core:3.24.2",
        "org.awaitility:awaitility:4.2.1",
        "org.bouncycastle:bcpg-jdk18on:1.72",
        "org.bouncycastle:bcpkix-jdk15on:1.70",
        "org.bouncycastle:bcprov-jdk15on:1.70",
        "org.elasticsearch.client:elasticsearch-rest-client:8.10.4",
        "org.grpcmock:grpcmock-core:0.13.0",
        "org.grpcmock:grpcmock-junit5:0.13.0",
        "org.grpcmock:grpcmock-spring-boot:0.13.0",
        "org.jadira.usertype:usertype.core:7.0.0.CR1",
        "org.jadira.usertype:usertype.spi:7.0.0.CR1",
        "org.jeasy:easy-random-core:5.0.0",
        "org.jetbrains:annotations:24.0.1",
        "org.joda:joda-money:1.0.3",
        "org.jsoup:jsoup:1.15.3",
        "org.mapstruct:mapstruct:1.5.2.Final",
        "org.mockito:mockito-core:5.7.0",
        "org.mockito:mockito-junit-jupiter:5.7.0",
        "org.mongodb:bson:4.11.2",
        "org.mongodb:mongodb-driver-core:4.11.2",
        "org.mongodb:mongodb-driver-sync:4.11.2",
        "org.opentest4j:opentest4j:1.3.0",
        "org.owasp.encoder:encoder:1.2.3",
        "org.projectlombok:lombok:1.18.32",
        "org.redisson:redisson:3.32.0",
        "org.reflections:reflections:0.10.2",
        "org.slf4j:slf4j-api:2.0.6",
        "org.springframework.boot:spring-boot-actuator:3.2.5",
        "org.springframework.boot:spring-boot-autoconfigure:3.2.5",
        "org.springframework.boot:spring-boot-test-autoconfigure:3.2.5",
        "org.springframework.boot:spring-boot-test:3.2.5",
        "org.springframework.boot:spring-boot:3.2.5",
        "org.springframework.data:spring-data-commons:3.2.5",
        "org.springframework.data:spring-data-mongodb:4.2.5",
        "org.springframework.data:spring-data-redis:3.2.5",
        "org.springframework.retry:spring-retry:2.0.5",
        "org.springframework.security:spring-security-config:6.2.4",
        "org.springframework.security:spring-security-core:6.2.4",
        "org.springframework.security:spring-security-crypto:6.2.4",
        "org.springframework.security:spring-security-web:6.2.4",
        "org.springframework:spring-aop:6.1.6",
        "org.springframework:spring-beans:6.1.6",
        "org.springframework:spring-context:6.1.6",
        "org.springframework:spring-core:6.1.6",
        "org.springframework:spring-messaging:6.1.6",
        "org.springframework:spring-test:6.1.6",
        "org.springframework:spring-tx:6.1.6",
        "org.springframework:spring-web:6.1.6",
        "org.springframework:spring-webmvc:6.1.6",
        "org.threeten:threetenbp:1.5.0",
        "org.yaml:snakeyaml:2.1",
        "software.amazon.awssdk:auth:2.17.136",
        "software.amazon.awssdk:kms:2.17.136",
        "software.amazon.awssdk:pinpoint:2.17.136",
        "software.amazon.awssdk:regions:2.17.136",
        "software.amazon.awssdk:sdk-core:2.17.136",
    ],
    fetch_sources = True,
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
