[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "first-python-package"
version = "0.0.1"
description = "This package does amazing things."
readme = { file = "README.md", content-type = "text/markdown" }
urls = { homepage = "https://github.com/jduan/cosmos" }
authors = [{ name = "Jingjing Duan", email = "duanjingjing@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["termcolor >= 1.1.0, < 2"]

[project.scripts]
harmony = "imppkg.harmony:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]
