[metadata]
name = first-python-package
version = 0.0.1
description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jduan/cosmos
author = Jingjing Duan
author_email = "Jingjing Duan" <duanjingjing@gmail.com>
license = MIT
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main
