[package]
name = "rust_sandbox"
version = "0.1.0"
authors = ["Jingjing Duan <duanjingjing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "1.3"
crossbeam = "0.7"
csv = "1.1"
float-cmp = "0.6"
futures = { version = "0.3", features = ["compat"] }
hyper = "0.12"
pin-utils = "0.1.0-alpha.4"
rand = "0.7.2"
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "0.3"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
float-cmp = "0.6"
tempfile = "3.1"

[[bin]]
name = "async_web_server"
path = "bin/async_web_server.rs"

[[bin]]
name = "tokio_client_example"
path = "bin/tokio_client_example.rs"

[[bin]]
name = "tokio_echo_server"
path = "bin/tokio_echo_server.rs"

[[bin]]
name = "block_on"
path = "bin/block_on.rs"
