[workspace]
members = [
    "actix_example",
    "actix_web_example",
    "async_std_example",
    "leetcode_30_challenges",
    "rust_cli",
    "rust_green_threads",
    "rust_minigrep",
    "rust_mio_example",
    "rust_parser_combinators",
    "rust_sandbox",
    "rust_thrift_example",
    "rust_tokio_example",
    "rust_webserver",
    "thread_pool_example",
]
