[package]
name = "rust_thrift_example"
version = "0.1.0"
authors = ["Jingjing Duan <duanjingjing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
thrift = "0.13.0"
ordered-float = "0.3.0"
try_from = "0.2.0"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"
