[package]
name = "rust_cli"
version = "0.1.0"
authors = ["Jingjing Duan <duanjingjing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
failure = "0.1.6"
exitfailure = "0.5.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
