[package]
name = "rust_mio_example"
version = "0.1.0"
authors = ["Jingjing Duan <duanjingjing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
mio = { version = "0.7.0-alpha.1", features = ["os-poll", "tcp"]}
