[package]
name = "rust_sandbox"
version = "0.1.0"
authors = ["Jingjing Duan <duanjingjing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
async-std = "1.5"
async-task = "1.3"
bson = "1.0"
crossbeam = "0.7"
csv = "1.1"
factor = "0.4"
float-cmp = "0.6"
futures = { version = "0.3", features = ["compat"] }
hyper = "0.14"
lazy_static = "1.4.0"
num_cpus = "1.12"
once_cell = "1.3"
pin-utils = "0.1.0-alpha.4"
rand = "0.7.2"
regex = "1"
ron = "0.6.0"
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "0.3"
serde_json = "1.0"
thiserror = "1.0.19"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
float-cmp = "0.6"
tempfile = "3.1"

[[bin]]
name = "async_web_server"
path = "bin/async_web_server.rs"

[[bin]]
name = "block_on"
path = "bin/block_on.rs"

# [[bin]]
# name = "my_executors"
# path = "bin/my_executors.rs"

[[bin]]
name = "async_std_example"
path = "bin/async_std_example.rs"

[[bin]]
name = "sandbox"
path = "bin/sandbox.rs"
