[package]
name = "rust_tokio_example"
version = "0.1.0"
authors = ["Jingjing Duan <duanjingjing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

[[bin]]
name = "tokio_client_example"
path = "bin/tokio_client_example.rs"

[[bin]]
name = "tokio_echo_server"
path = "bin/tokio_echo_server.rs"

[[bin]]
name = "tokio_hello_world"
path = "bin/tokio_hello_world.rs"

