[package]
name = "rust_tokio_example"
version = "0.1.0"
authors = ["Jingjing Duan <duanjingjing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
chrono = "0.4"
futures = "0.3"
http = "0.2"
httparse = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.8", features = ["full"] }
tokio-util = { version = "0.3", features = ["full"] }

[[bin]]
name = "tokio_client_example"
path = "bin/tokio_client_example.rs"

[[bin]]
name = "tokio_echo_server"
path = "bin/tokio_echo_server.rs"

[[bin]]
name = "tokio_hello_world"
path = "bin/tokio_hello_world.rs"

[[bin]]
name = "tokio_tinydb"
path = "bin/tokio_tinydb.rs"

[[bin]]
name = "tokio_tiny_http"
path = "bin/tokio_tiny_http.rs"
